--- a/css/checkout-steps-rtl-302-beta-9.css
+++ b/css/checkout-steps-rtl-302-beta-9.css
@@ -1143,6 +1143,7 @@ body.woocommerce-checkout div.woocommerce #add_payment_method .fc-wrapper #payme
 .fc-wrapper #payment ul.payment_methods > li.wc_payment_method > label img {
   float: none;
   display: inline-block;
+  margin-right: 5px;
   height: 24px;
   vertical-align: middle;
 }
